--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
+html {
+  background-color: lightgray;
+}
+
 div {
   border-radius: 5px 5px 5px 5px;
   vertical-align: middle;
   text-align: center;
+  font-size: 23px;
+  font-family: "Gill Sans", sans-serif;
 }
 
 .pressed {
-  background-color: lightblue;
-  color: red;
+  position: relative;
+  left:2px;
+  top:2px;
 }
 
 .num:hover, .ex:hover, .decimal:hover, .percentage:hover {
@@ -19,19 +26,41 @@ div {
 }
 .calculator {
   position: absolute;
-  top:20%;
+  top:12%;
   left:35%;
-  width:420px;
-  height:453px;
-  border-style: solid;
+  width:415px;
+  height:448px;
+  border: 10px solid black;
   text-align: center;
+  background-color: gray;
+
+
 }
 
 .display {
   background-color: #FF7F50;
-  width:402px;
+  position: relative;
+  left: 3px;
+  width:390px;
   height:60px;
-  margin: 0px 0px 5px 0px;
+
+
+}
+
+.fill {
+  position:relative;
+  left: 10px;
+  height: 448px;
+  border-radius: 0px 0px 0px 0px;
+}
+
+.disp {
+  margin: 0px 10px 5px 0px;
+  float:right;
+  position:relative;
+  top: 15px;
+  font-size: 30px;
+  font-family: "Gill Sans", sans-serif;
 }
 
 .numbers {
@@ -44,15 +73,16 @@ div {
 .operations {
   float:left;
   left: 0px;
-  width: 105px;
+  width: 100px;
   height: 405px;
   margin: 0px 0px 0px 5px;
+
 }
 
 .extras {
   position: relative;
-  top: -95px;
-  margin: 0px 5px 0px 2.5px;
+  top: -97px;
+  margin: 2.5px 0px 0px 2.5px;
 }
 
 .num, .ex, .decimal, .percentage {
@@ -66,7 +96,7 @@ div {
 
 .op, #equals {
   float:left;
-  width: 100px;
+  width: 95px;
   height: 75px;
   background-color: orange;
   margin: 1px 1px 1px -15px;
